# nix.opam

./: gen_config.sh  nix.opam
